# prolitex

./: Makefile.am  configure.ac  index.html  prolite.tex  prolitex.awk.tex  prolitex.dtx  prolitex.ins  prolitex.tex
prolitex/: index.html
